# advent0fc0de2024

./: Cargo.toml
inputs/: day11.txt
src/day01/: first.rs  mod.rs  second.rs
src/day02/: first.rs  mod.rs  second.rs
src/day03/: first.rs  mod.rs  second.rs
src/day04/: first.rs  second.rs
src/day05/: first.rs  second.rs
src/day06/: first.rs  mod.rs  second.rs
src/day07/: first.rs  mod.rs  second.rs
src/day08/: first.rs  mod.rs  second.rs
src/day09/: first.rs  mod.rs  second.rs
src/day10/: first.rs  second.rs
src/day11/: first.rs  mod.rs  second.rs
temo/: day06
