[package]
name = "advent0fc0de2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
indoc = "2.0.5"
regex = "1.11.1"

[[bin]]
name = "day01"
path = "src/day01/mod.rs"

[[bin]]
name = "day02"
path = "src/day02/mod.rs"

[[bin]]
name = "day03"
path = "src/day03/mod.rs"

[[bin]]
name = "day04"
path = "src/day04/mod.rs"

[[bin]]
name = "day05"
path = "src/day05/mod.rs"

[[bin]]
name = "day06"
path = "src/day06/mod.rs"

[[bin]]
name = "day07"
path = "src/day07/mod.rs"

[[bin]]
name = "day08"
path = "src/day08/mod.rs"
